--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.22.2",
     "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
